--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ node_js :
 install:
   - npm install
 script:
+  - npm run lint
   - npm test
 after_script: "cat coverage/src/lcovonly | node_modules/coveralls/bin/coveralls.js"
