--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "parser-boolean",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "parse boolean",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "karma start --singleRun=true",
     "test:watch": "karma start --singleRun=false",
-    "init": "docker build -t parser-boolean .",
-    "runTest": "docker run --rm -d --name container parser-boolean "
+    "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -36,6 +35,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^1.4.2",
     "karma-typescript": "^4.1.1",
+    "tslint": "^5.18.0",
     "typescript": "^3.5.2"
   },
   "dependencies": {}
